Updated notebooks and added sample files
Example notebooks now make use of sample files, so they can be run
without output from RH.

--- a/doc/notebooks/InputData.ipynb
+++ b/doc/notebooks/InputData.ipynb
@@ -20,34 +20,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/Users/tiago/codes/rh/Atmos\n"
-     ]
-    }
-   ],
-   "source": [
-    "cd ~/codes/rh/Atmos"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## 1. Input atmosphere visualisation\n",
     "\n",
-    "One can explore the input atmosphere using a function from `helita.sim.rh15d_vis`. Enter the file name as argument:"
+    "One can explore the input atmosphere using a function from `helita.sim.rh15d_vis`. Enter the file name and path as argument:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -57,23 +40,14 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "rh15d_vis.InputAtmosphere('FALC_82_5x5.hdf5');"
+    "rh15d_vis.InputAtmosphere('../../Atmos/FALC_82_5x5.hdf5');"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
