--- a/doc/notebooks/InputData.ipynb
+++ b/doc/notebooks/InputData.ipynb
@@ -3,13 +3,12 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib ipympl\n",
-    "from helita.sim import rh15d, rh15d_vis"
+    "%matplotlib widget\n",
+    "from helita.sim import rh15d\n",
+    "from helita.vis import rh15d_vis"
    ]
   },
   {
@@ -66,9 +65,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
