--- a/doc/notebooks/Visualisation.ipynb
+++ b/doc/notebooks/Visualisation.ipynb
@@ -4,12 +4,16 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
-    "%matplotlib ipympl\n",
-    "from helita.sim import rh15d, rh15d_vis"
+    "%matplotlib widget\n",
+    "from helita.sim import rh15d \n",
+    "from helita.vis import rh15d_vis"
    ]
   },
   {
@@ -47,9 +51,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## 1. Populations visualisation"
    ]
@@ -143,9 +145,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
